pyttern/antlr/ludii/LudiiParser.py
# Generated from LudiiParser.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LudiiParser ( Parser ):

    grammarFileName = "LudiiParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "','", "';'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "SEMI_COLON", "LBRACE", "RBRACE", "WS", "COMMENT", 
                      "LINE_COMMENT", "NAME", "STRING", "LITERAL", "NUMBER", 
                      "REFERENCE" ]

    RULE_file_input = 0
    RULE_function = 1
    RULE_args = 2
    RULE_named_argument = 3
    RULE_argument = 4
    RULE_lst = 5

    ruleNames =  [ "file_input", "function", "args", "named_argument", "argument", 
                   "lst" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    COLON=3
    COMMA=4
    SEMI_COLON=5
    LBRACE=6
    RBRACE=7
    WS=8
    COMMENT=9
    LINE_COMMENT=10
    NAME=11
    STRING=12
    LITERAL=13
    NUMBER=14
    REFERENCE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LudiiParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LudiiParser.FunctionContext)
            else:
                return self.getTypedRuleContext(LudiiParser.FunctionContext,i)


        def getRuleIndex(self):
            return LudiiParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = LudiiParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 12
                self.function()
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self.match(LudiiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LudiiParser.LPAREN, 0)

        def NAME(self):
            return self.getToken(LudiiParser.NAME, 0)

        def args(self):
            return self.getTypedRuleContext(LudiiParser.ArgsContext,0)


        def RPAREN(self):
            return self.getToken(LudiiParser.RPAREN, 0)

        def getRuleIndex(self):
            return LudiiParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = LudiiParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(LudiiParser.LPAREN)
            self.state = 21
            self.match(LudiiParser.NAME)
            self.state = 22
            self.args()
            self.state = 23
            self.match(LudiiParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LudiiParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LudiiParser.ArgumentContext,i)


        def named_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LudiiParser.Named_argumentContext)
            else:
                return self.getTypedRuleContext(LudiiParser.Named_argumentContext,i)


        def getRuleIndex(self):
            return LudiiParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = LudiiParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2114) != 0):
                self.state = 27
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 25
                    self.argument()
                    pass

                elif la_ == 2:
                    self.state = 26
                    self.named_argument()
                    pass


                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_argumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LudiiParser.NAME, 0)

        def COLON(self):
            return self.getToken(LudiiParser.COLON, 0)

        def argument(self):
            return self.getTypedRuleContext(LudiiParser.ArgumentContext,0)


        def getRuleIndex(self):
            return LudiiParser.RULE_named_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_argument" ):
                listener.enterNamed_argument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_argument" ):
                listener.exitNamed_argument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamed_argument" ):
                return visitor.visitNamed_argument(self)
            else:
                return visitor.visitChildren(self)




    def named_argument(self):

        localctx = LudiiParser.Named_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_named_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(LudiiParser.NAME)
            self.state = 33
            self.match(LudiiParser.COLON)
            self.state = 34
            self.argument()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(LudiiParser.FunctionContext,0)


        def lst(self):
            return self.getTypedRuleContext(LudiiParser.LstContext,0)


        def NAME(self):
            return self.getToken(LudiiParser.NAME, 0)

        def getRuleIndex(self):
            return LudiiParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = LudiiParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.function()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.lst()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(LudiiParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LudiiParser.LBRACE, 0)

        def args(self):
            return self.getTypedRuleContext(LudiiParser.ArgsContext,0)


        def RBRACE(self):
            return self.getToken(LudiiParser.RBRACE, 0)

        def getRuleIndex(self):
            return LudiiParser.RULE_lst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLst" ):
                listener.enterLst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLst" ):
                listener.exitLst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLst" ):
                return visitor.visitLst(self)
            else:
                return visitor.visitChildren(self)




    def lst(self):

        localctx = LudiiParser.LstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(LudiiParser.LBRACE)
            self.state = 42
            self.args()
            self.state = 43
            self.match(LudiiParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





